nunjucks template 분할 완료

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -2,6 +2,7 @@
 {% set title = 'FASTBOOK : Memo' %}
 
 {% block header %}
+{% set headerItem = 'menu' %}
   {% include "header.html" %}
 {% endblock %}
 
